--- a/options.html
+++ b/options.html
@@ -9,7 +9,7 @@
     <h1>Transmission Settings</h1>
     <div>
         <label for="serverUrl">Server URL:</label>
-        <input type="text" id="serverUrl" placeholder="e.g., http://host:port OR http://host:port/transmission/rpc" style="width: calc(100% - 22px); padding: 10px; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box;"/>
+        <input type="text" id="serverUrl" placeholder="e.g., http://host:port/transmission/rpc" style="width: calc(100% - 22px); padding: 10px; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box;"/>
         <p style="font-size: 0.85em; color: #555; margin-top: 5px;">
             Enter your Transmission server's address. The extension will append <code>/transmission/rpc</code> if not already included.
         </p>
